force-app/main/default/objects/ucl_Client__c/ucl_Client__c.object-meta.xml
<CustomObject>
    <description>The custom object for the Client of the Legal Advisor</description>
    <label>Client</label>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>