force-app/main/default/objects/ucl_Client__c/fields/Addres__c.field-meta.xml
<CustomField>
    <fullName>Addres__c</fullName>
    <label>Addres</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>