force-app/main/default/objects/ucl_Client__c/fields/Asesored_By__c.field-meta.xml
<CustomField>
    <fullName>Asesored_By__c</fullName>
    <label>Asesored By</label>
    <referenceTo>ucl_Legal_Advisor__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>