force-app/main/default/objects/ucl_Client__c/fields/Client_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Key__c</fullName>
    <externalId>true</externalId>
    <label>Client Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>