force-app/main/default/objects/ucl_Client__c/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <label>Client Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>