force-app/main/default/objects/ucl_Client__c/fields/Created_By_Admin__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Admin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Created By Admin?</label>
    <type>Checkbox</type>
</CustomField>