force-app/main/default/objects/ucl_Client__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>