force-app/main/default/objects/ucl_Client__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asesored_By__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Addres__c</columns>
    <columns>Created_By_Admin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>